# MM_algo

./: README.md
StochMak/: AvellanedaStrategy.cpp  AvellanedaStrategy.h  CMakeLists.txt  EstimationAlgo.cpp  EstimationAlgo.h  Handler.h  TradeData.h  Utility.cpp  Utility.h  futures.cpp  init.h  main.cpp
StochMak/json/: json.h
